<package format="2">
  <name>prbt_support</name>
  <version>0.4.0</version>
  <description> Mechanical, kinematic and visual description
  of the Pilz light weight arm PRBT. </description>

  <maintainer email="ros@pilz.de">Pilz GmbH and Co. KG</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://wiki.ros.org/prbt_support</url>
  <url type="bugtracker">https://github.com/PilzDE/pilz_robots/issues</url>
  <url type="repository">https://github.com/PilzDE/pilz_robots</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>canopen_motor_node</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>rosservice</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>pilz_control</exec_depend>
  <exec_depend>prbt_hardware_support</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>moveit_core</test_depend>
  <test_depend>moveit_kinematics</test_depend>
  <test_depend>cmake_modules</test_depend>
  <test_depend>eigen</test_depend>
  <test_depend>roslaunch</test_depend>
</package>
