<package format="2">
  <name>prbt_support</name>
  <version>0.4.9</version>
  <description> Mechanical, kinematic and visual description
  of the Pilz light weight arm PRBT. </description>

  <maintainer email="a.gutenkunst@pilz.de">Alexander Gutenkunst</maintainer>
  <maintainer email="c.henkel@pilz.de">Christian Henkel</maintainer>
  <maintainer email="h.slusarek@pilz.de">Hagen Slusarek</maintainer>
  <maintainer email="i.martini@pilz.de">Immanuel Martini</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://wiki.ros.org/prbt_support</url>
  <url type="bugtracker">https://github.com/PilzDE/pilz_robots/issues</url>
  <url type="repository">https://github.com/PilzDE/pilz_robots</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>canopen_motor_node</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>rosservice</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>pilz_control</exec_depend> <!--contains the PilzJointTrajectoryController-->
  <exec_depend>prbt_hardware_support</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>moveit_core</test_depend>
  <test_depend>moveit_kinematics</test_depend>
  <test_depend>cmake_modules</test_depend>
  <test_depend>eigen</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>prbt_hardware_support</test_depend>
</package>
